# crag

./: .clang-format  .gitignore  CMakeLists.txt  Copyright  Doc.cfg  Makefile  README.md  README.txt  build-config.mk  common.mk
Alphabet/: CMakeLists.txt  Makefile
Alphabet/ParserDefns/: AlphabetBisonGrammar.y  AlphabetFlex.l  Makefile  WordBisonGrammar.y  WordFlex.l  build
Alphabet/include/: Alphabet.h  AlphabetBisonGrammar.h  Parser.h  WordBisonGrammar.h
Alphabet/main/: mainParser.cpp
Alphabet/src/: Alphabet.cpp  AlphabetBisonGrammar.cpp  AlphabetFlex.cpp  WordBisonGrammar.cpp  WordFlex.cpp
BraidGroup/: CMakeLists.txt  Makefile
BraidGroup/include/: BKLLeftNormalForm.h  BKLRightNormalForm.h  BraidGroup.h  DehornoyForm.h  DehornoyForm_old.h  LinkedBraidStructure.h  LinkedBraidStructure_old.h  ShortBraidForm.h  ShortBraidForm_old.h  ThLeftNormalForm.h  ThRightNormalForm.h  ThRightNormalFormAlgorithms.h  braid_group.h  cloaking_element.h  colored_burau.h  fast_conjugacy_check.h  fast_identity_check.h  stochastic_rewrite.h
BraidGroup/main/: test_deh_form.cpp  test_leftNF.cpp  test_rightNF.cpp
BraidGroup/src/: BKLLeftNormalForm.cpp  BKLRightNormalForm.cpp  BraidGroup.cpp  DehornoyForm.cpp  DehornoyForm_old.cpp  LinkedBraidStructure.cpp  LinkedBraidStructure_old.cpp  ShortBraidForm.cpp  ShortBraidForm_old.cpp  ThLeftNormalForm.cpp  ThRightNormalForm.cpp  ThRightNormalFormAlgorithms.cpp  ThRightNormalForm_sss.cpp  ThRightNormalForm_uss.cpp  braid_group.cpp  colored_burau.cpp  stochastic_rewrite.cpp
BraidGroup/test/: test_cloaking_element.cpp  test_colored_burau.cpp  test_fast_conjugacy_check.cpp  test_fast_identity_check.cpp  test_linked_braid_structure.cpp  test_stochastic_rewrite.cpp
CryptoAAG/: CMakeLists.txt  Makefile
CryptoAAG/include/: AAGChallengeGeneration.h  AAGKeyGeneration.h  LengthAttack.h  MajorDump.h
CryptoAAG/main/: SSA_test.cpp  test_AAG.cpp  test_PickCorr.cpp  test_challenge.cpp  test_commutators.cpp  test_length_attack.cpp  test_sbgp_attack.cpp
CryptoAAG/src/: AAGChallengeGeneration.cpp  AAGKeyGeneration.cpp  LengthAttack_A1.cpp  LengthAttack_A2.cpp  LengthAttack_A3.cpp  MajorDump.cpp
CryptoAE/: Makefile  (+1 more)
CryptoShftConj/: CMakeLists.txt  Makefile
CryptoShftConj/include/: ShftConjKeyGeneration.h  ShftConjKeyGenerationGarside.h
CryptoShftConj/main/: attack_shifted_CP_uss.cpp  old_attack_shifted_CP_uss.cpp
CryptoShftConj/src/: ShftConjKeyGeneraion.cpp  ShftConjKeyGenerationGarside.cpp
CryptoTripleDecomposition/: CMakeLists.txt  Makefile
CryptoTripleDecomposition/include/: TripleDecompositionKeyGeneration.h
CryptoTripleDecomposition/src/: TripleDecompositionKeyGeneration.cpp
Elt/: CMakeLists.txt  Makefile
Elt/include/: PowerWord.h  PowerWordIterator.h  PowerWordRep.h  Word.h  WordIterator.h  WordRep.h
Elt/main/: ac_enum.cpp  test_word.cpp
Elt/src/: PowerWord.cpp  PowerWordIterator.cpp  PowerWordRep.cpp  Word.cpp  WordIterator.cpp  WordRep.cpp
Elt/test/: test_word.cpp  test_word_rep.cpp
FiniteField/: CMakeLists.txt
FiniteField/include/: FiniteField.h  GCD.h
FiniteField/src/: FiniteField.cpp
FiniteField/test/: TestFiniteField.cpp
FreeGroup/: CMakeLists.txt  Doxyfile  Makefile
FreeGroup/include/: AAGCrypto.h  CompositionSystemSet.h  EndomorphismSLP.h  FGACrypto.h  FreeGroup.h  FreeGroupAutomorhpism.h  SLPSet.h  StraightLineProgramWord.h  WhiteheadGraph.h  arithmetic_sequence.h  fga_csp_attack.h  permutation16.h  slp.h  slp_common_prefix.h  slp_inspector.h  slp_mapper.h  slp_pattern_matching.h  slp_recompression.h  slp_reduce.h  slp_vertex.h  slp_vertex_hash.h  slp_vertex_word.h
FreeGroup/main/: aag_scheme_exp.cpp  cache_length_expirement.cpp  collisions_analyzer.cpp  conj_scheme_exp.cpp  endomorphism_slp_tests.cpp  fga_scheme_exp.cpp  hash_reduce.cpp  lba_attack.cpp  profile_matching_new.cpp  profile_matching_old.cpp  profile_normal_form.cpp  profile_reduce.cpp  profile_reduce_narrow.cpp  reduce_structure.cpp  test_cs.cpp
FreeGroup/scripts/: aag_processing.py  create_plots_for cs_perf.py  lba_hist_creator.py  nf_fr_stats_extractor.py  process_lba_result_script.py
FreeGroup/src/: EndomorphismSLP.cpp  FreeGroup.cpp  FreeGroupAutomorphism.cpp  SLPSet.cpp  StraightLineProgramWord.cpp  StraightLineProgramWord_operators.cpp  StraightLineProgramWord_split.cpp  StraightLineProgramWord_truncate.cpp  WhiteheadGraph.cpp  fga_csp_attack.cpp  slp.cpp  slp_recompression.cpp
FreeGroup/test/: AAGCryptoTest.cpp  EndomorphismSLP_test.cpp  FGACryptoTest.cpp  FreeGroupAutomorphism_test.cpp  SLPSet_MatchingTable.cpp  SLPSet_common.cpp  SLPSet_inspector.cpp  SLPSet_main.cpp  SLPSet_produced_word.cpp  SLP_inspector.cpp  SLP_pattern_matching.cpp  SLP_vertex.cpp  SLP_vertex_word.cpp  arithmetic_sequence.cpp  permutation16.cpp  slp_common_prefix.cpp  slp_inspector.cpp  slp_pattern_matching.cpp  slp_recompression_test.cpp  slp_reduce.cpp  slp_vertex.cpp  slp_vertex_hash.cpp  slp_vertex_word.cpp
Graph/: CMakeLists.txt  Makefile
Graph/include/: FSA.h  FSARep.h  Graph.h  GraphAlgorithms.h  GraphConcept.h  GraphConceptAlgorithms.h  GraphDrawingAttributes.h  GraphRep.h  GraphType.h  RandomFSA.h
Graph/main/: test_graph_algs.cpp  test_rand.cpp
Graph/src/: FSA.cpp  FSARep.cpp  Graph.cpp  GraphAlgorithms.cpp  GraphConcept.cpp  GraphDrawingAttributes.cpp  GraphRep.cpp  GraphType.cpp  RandomFSA.cpp
Kayawood/: CMakeLists.txt
Kayawood/include/: kayawood.h  kayawood_attack.h  kayawood_cloaking.h  kayawood_parameters.h
Kayawood/main/: kayawood_main.cpp
Kayawood/src/: kayawood.cpp
Kayawood/test/: test_kayawood.cpp  test_kayawood_attack.cpp
Random/: CMakeLists.txt
Random/include/: random_permutation.h  random_subset.h  random_word.h  shuffle.h
Random/src/: random_word.cpp
Random/test/: test_random_permutation.cpp  test_random_subset.cpp  test_random_word.cpp  test_shuffle.cpp
Walnut/: CMakeLists.txt
Walnut/include/: walnut.h  walnut_attack.h  walnut_cloaking.h  walnut_encoding.h  walnut_parameters.h
Walnut/main/: walnut_main.cpp
Walnut/src/: walnut_encoding.cpp
general/: CMakeLists.txt  Makefile  boost_pool.tar.bz2
(+160 files in other folders)
